General refactor: Global error handler, Environment variables, portainer

--- a/PayRetailers.Api/appsettings.Development.json
+++ b/PayRetailers.Api/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "TransactionsConnectionString": "Host=localhost;Port=5432;Database=integrations;Username=pr;Password=pr123"
+  },
+  "ProviderApiEndpoints": {
+    "PayBroBaseUrl": "https://wiremock-api.azurewebsites.net/test-code/paybro",
+    "BankVolatBaseUrl": "https://wiremock-api.azurewebsites.net/test-code/bankvolat"
   }
 }
