--- a/PayRetailers.Api/appsettings.json
+++ b/PayRetailers.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AccountSettings": {
+    "LimitUsd": 150.0
+  }
 }
