--- a/PayRetailers.Application/PayRetailers.Application.csproj
+++ b/PayRetailers.Application/PayRetailers.Application.csproj
@@ -8,10 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit.Abstractions" Version="8.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PayRetailers.Domain\PayRetailers.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
